2003-05-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.mgw config/makefile.cyg: New configuration define
	GNUSORT.

2003-05-10  Ethan Merritt <merritt@u.washington.edu>

	* src/plot2d.c docs/gnuplot.doc: Apply current fill style to boxes 
	drawn for 'plot with boxxyerror'.

2003-05-10  Ethan Merritt <merritt@u.washington.edu>

	* term/x11.trm: Expand documentation of font handling.
	* src/readline.c: Allow <tab> characters in input stream.

2003-05-09  Ethan Merritt <merritt@u.washington.edu>

	* term/cgm.trm: Add missing prototype for CGM_fillbox().
	* src/term.c: Work around Microsoft compiler inadequacy.
	* src/datafile.c: Trap missing filename in df_open().

2003-05-06  James R. Van Zandt  <jrv@vanzandt.mv.com>

	* term/cgm.trm (CGM_fillbox): Implement pattern filled boxes,
	conditioned on USE_ULIG_FILLEDBOXES.

2003-05-06  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/term.c (test_term): Improvements in the 'test' command: Some of
	the text labels are in colors; added test for text at +-45 deg; added
	test for mouse and for pm3d.

2003-05-06  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (recalc_ruler_pos): Take care of ruler in 'set view map'
	splot.

2003-05-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/datafile.c: Fixed #define is_comment(c): strchr(s,c) returns
	!NULL for c=0.

2003-05-03  Ethan Merritt <merritt@u.washington.edu>

	* term/mif.trm: Implement support for filled boxes, pattern fill
	and for PM3D filled polygons.

2003-05-01  Ethan Merritt <merritt@u.washington.edu>

	* term/pdf.trm: Remove limit of 4 vertices in fill_polygon().

2003-04-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Say that the either of `set datafile commentschars`
	characters must be the first non-blank blank character on the line.

2003-04-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/datafile.c src/datafile.h src/save.c